--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ button a{
       <h1 <SPAN style="padding-left: 100PX;">Past Experience</h1>
       <div class="box">
           <div class="vertical">
-           <img class="image" src="html.png">
+           <img class="image" src="images/html.png">
             <div class="vertical-title">
               html,CSS(2023-24)
             </div>
