--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ button a{
         </div>
       </div>
       <div class="rightsection">
-        <img src="image2.jpg" alt="" >
+        <img src="images/image2.jpg" alt="" >
       </div>
     </section>
     <hr>
@@ -246,7 +246,7 @@ button a{
             </div>
           </div>
           <div class="vertical">
-            <img class="image" src="js.png">
+            <img class="image" src="images/js.png">
              <div class="vertical-title">
                Java Script(2023-24)
              </div>
@@ -256,7 +256,7 @@ button a{
              </div>
            </div>
            <div class="vertical">
-            <img class="image" src="php_logo.jpg">
+            <img class="image" src="images/php_logo.jpg">
              <div class="vertical-title">
                PHP - Backend(2024-25)
              </div>
@@ -266,7 +266,7 @@ button a{
              </div>
            </div>
            <div class="vertical">
-            <img class="image" src="react_js.png">
+            <img class="image" src="images/react_js.png">
              <div class="vertical-title">
                React Js(2024-25)
              </div>
