--- a/home.html
+++ b/home.html
@@ -242,7 +242,7 @@
         <button><a href="https://github.com/hevendra630">GitHub</a></button>
       </div>
       <div class="rightsection">
-        <img class="profile-img" src="image2.jpg" alt="Profile Image">
+        <img class="profile-img" src="images/image2.jpg" alt="Profile Image">
       </div>
     </section>
     <!-- ABOUT SECTION -->
