--- a/about_me.html
+++ b/about_me.html
@@ -196,7 +196,7 @@
         <button><a href="https://github.com/">GitHub</a></button>
       </div>
       <div class="rightsection">
-        <img class="profile-img" src="image2.jpg" alt="Profile Image">
+        <img class="profile-img" src="images/image2.jpg" alt="Profile Image">
       </div>
     </section>
     <!-- ABOUT/BIOGRAPHY SECTION -->
